# px4_command

./: CMakeLists.txt  README.md  package.xml
config/: BaselineControllerParameters.yaml  Parameter_3drone_payload_gazebo.yaml  Parameter_for_control.yaml  Parameter_for_control_2_drone.yaml  Parameter_for_control_gazebo.yaml  controllersettings.yaml  fsc_lab_geo_fence.yaml  indoorgeofence.yaml  outdoorgeofence.yaml  payload_control.yaml  px4_pos_estimator.yaml
firmware/: px4fmu-v2-for-P100.px4
firmware/2019.4 .22 -  add passivity/: log_0_2019-3-28-18-28-54.ulg  log_82_2019-3-28-18-22-54.ulg  px4fmu-v3_default.px4  px4fmu-v5_default.px4
firmware/2019.4.11 - add ude att control/: px4fmu-v3_default.px4  px4fmu-v5_default.px4
firmware/2019.4.12- ude att control for test/: px4fmu-v3_default.px4  px4fmu-v5_default.px4
firmware/2019.4.17 -  pd+ude att control for test/: px4fmu-v3_default.px4  px4fmu-v5_default.px4
firmware/2019.4.9 - 降低了att发布频率/: px4fmu-v3_default.px4  px4fmu-v5_default.px4
include/: OptiTrackFeedBackRigidBody.h  att_controller_PID.h  circle_trajectory.h  command_to_mavros.h  command_to_mavros_multidrone.h  drone_parameter_command.h  math_utils.h  optitrack_filter.h  payload_controller_GNC.h  payload_controller_JGCD.h  payload_controller_TCST.h  pos_controller_NE.h  pos_controller_PID.h  pos_controller_Passivity.h  pos_controller_TCST_single.h  pos_controller_TIE.h  pos_controller_UDE.h  pos_controller_cascade_PID.h  pos_controller_ne.h  pos_controller_passivity.h  pos_controller_utils.h  px4_command_utils.h  quadrotor_drone.h  rectangular_trajectory.h  state_from_mavros.h  state_from_mavros_multidrone.h
launch/: PID_param.yaml  Parameter_for_control.yaml  SITL_gazebo.launch  SITL_ude.launch  autonomous_landing.launch  collision_avoidance.launch  collision_avoidance_streo.launch  mavros_multi_drone.launch  mavros_multi_drone_USBbridge.launch  optitrack_sender.launch  px4_interdrone_communication.launch  px4_interdrone_communication_gazebo.launch  px4_interdrone_communication_sitl.launch  px4_multidrone_pos_controller.launch  px4_multidrone_pos_controller_gazebo.launch  px4_multidrone_pos_controller_outdoor.launch  px4_multidrone_pos_controller_outdoor_gazebo.launch  px4_multidrone_pos_controller_sitl.launch  px4_multidrone_pos_estimator.launch  px4_multidrone_pos_estimator_outdoor.launch  px4_multidrone_pos_estimator_pure_vision.launch  px4_outdoor_wifitest.launch  px4_payload_sitl.launch  px4_pos_att_controller.launch  px4_pos_controller.launch  px4_pos_controller_UDE.launch  px4_pos_controller_ne.launch  px4_pos_controller_passivity.launch  px4_pos_estimator.launch  px4_pos_estimator.yaml  px4_sender.launch  square.launch  square.yaml  target_tracking.launch  vrpn_.launch
msg/: AddonForce.msg  AttitudeReference.msg  AuxiliaryState.msg  AuxiliaryState_singleUAV.msg  ControlCommand.msg  ControlOutput.msg  DroneState.msg  FleetStatus.msg  HomePosition.msg  MocapInfo.msg  PayloadPoseCommand.msg  SimplifiedLog.msg  Topic_for_log.msg  TrajectoryPoint.msg  command.msg  data_log.msg  ude_log.msg
sh/: test_for_estimator.sh  test_for_sender.sh
sh/sh_for_gazebo/: sitl_passivity.sh  sitl_pid.sh  sitl_ude.sh
sh/sh_for_odroid/: payload_drop.sh  test_for_UDE.sh  test_for_att.sh  test_for_ne.sh  test_for_passivity.sh  test_for_pid.sh  test_for_pos_controller.sh  test_for_sender.sh
sh/sh_for_payload_control/: payload_multi_UAV.sh  payload_multi_UAV_pure_vision.sh  payload_multi_UAV_sitl.sh  payload_multi_UAV_sitl_2drones.sh  payload_multi_UAV_sitl_3drones.sh  payload_single_UAV.sh  payload_single_UAV_sitl_gps_vision.sh  payload_single_UAV_visionfeedback.sh  payload_single_UAV_with_id.sh  pld_ctrl_launch.sh
sh/sh_for_simulation/: sitl_gazebo_iris.sh  sitl_gazebo_ne.sh  sitl_gazebo_passivity.sh  sitl_gazebo_pid.sh  sitl_jMAVSim_pos_controller.sh  sitl_test.sh  test.sh
sh/test/: test_for_UDE.sh  test_for_ne.sh  test_for_passivity.sh
sitlmodel/launchfile/: multi_drone_payload_3_sitl.launch  multi_drone_test.launch  uav_single_drone_with_id.launch
sitlmodel/multi_iris/: iris.sdf  model.config  multi_iris.sdf
src/: Data_log.cpp  eigen_test.cpp  fake_vicon.cpp  ground_station.cpp  optitrack_sender.cpp  px4_estimator_vision.cpp  px4_interdrone_communication.cpp  px4_multidrone_pos_controller.cpp  px4_multidrone_pos_estimator.cpp  px4_multidrone_pos_estimator_outdoor.cpp  px4_multidrone_pos_estimator_pure_vision.cpp  px4_pos_att_controller.cpp  px4_pos_controller.cpp  px4_pos_controller_UDE.cpp  px4_pos_estimator.cpp  px4_pos_estimator_pure_vision.cpp  px4_sender.cpp
src/Application/: autonomous_landing.cpp  collision_avoidance.cpp  collision_avoidance_streo.cpp  formation_control_sitl.cpp  payload_drop.cpp  square.cpp  target_tracking.cpp
src/Test/: px4_pos_att_controller.cpp  px4_pos_controller_UDE.cpp  px4_pos_controller_passivity.cpp
src/Utilities/: Data_log.cpp  OptiTrackTest.cpp  eigen_test.cpp  fake_vicon.cpp  filter_tester.cpp  move.cpp  outdoorwifitest.cpp  outdoorwifitest_ground.cpp  px4_ws_vscode.code-workspace  qt_GUI_bridge.cpp  set_mode.cpp  set_uav0_mode.cpp  set_uav1_mode.cpp  set_uav2_mode.cpp  setpoint_track.cpp
src/lib/: OptiTrackFeedBackRigidBody.cpp
srv/: ControlParameter.srv  Emergency.srv  GeneralInfo.srv  SetHome.srv  SinglePayloadAction.srv
